* 2014-03-07 - marcus.klein@open-xchange.com

 - Fix for bug 31405: Implementation of move context now uses existing functionality to update context to database mapping that takes care
   about MySQL master/slave setups.

* 2014-03-06 - marcus.klein@open-xchange.com

 - Fix for bug 29980: Use row locks on table configdb.context_server2db_pool to prevent a delete context call to remove the schema a create
   context call is currently writing to.

* 2014-03-06 - ioannis.chouklis@open-xchange.com

 - Fix for bug 31447: [L3] Logging for missing user and context mapping should be improved for IMAP auth bundle
 - Fix for bug 31415: NullPointerException: A null service reference is not allowed
 
* 2014-03-06 - martin.schneider@open-xchange.com

 - Fix for bug 31443: Do not autorename folders equal to default folder names while creation. Throw exception instead.

* 2014-03-06 - martin.herfurth@open-xchange.com

 - Fix for bug 30732: Ignore removal of resources by externals.

* 2014-03-06 - thorben.betten@open-xchange.com

 - Fix for bug 31392: Made module-specific error messages
 - Fix for bug 31394: Added possibility to delete a quota value once it is set through specifying a value less than zero

* 2014-03-06 - tobias.friedrich@open-xchange.com

 - Fix for bug 31391: Use dynamically registered key and certificate providers for cloud-based push notifications
 
* 2014-03-03 - dennis.sieben@open-xchange.com

 - Fix for bug 31329: Multi-line calculation has now also been added for PGP_ENCRYPT commands

* 2014-03-03 - dennis.sieben@open-xchange.com

 - Added null check for possible NPE in OSGiAbstractor

* 2014-03-03 - marcus.klein@open-xchange.com

 - Fix for bug 31364: Marked autoconfig.properties as configuration file.
 - Fix for bug 29975: Committing now first the context data to the user database before committing the context to the config database. This