@@ -1,0 +1,4 @@
+# Ant properties for the buildsystem
+
+# base directory for the build scripts
+basedir=build
